# Metodos-Numericos-2

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  derivada_num.cpp  main.cpp
atividades/: proc_imgs.cpp
derivadaLim/: derivadaLimAbs.hpp  derivadaLimBw.cpp  derivadaLimCt.hpp  derivadaLimFw.cpp
derivadaLim/include/: derivadaLimBw.hpp  derivadaLimCt.hpp  derivadaLimFw.hpp
derivadaLim/src/: derivadaLimBw.cpp  derivadaLimCt.cpp  derivadaLimFw.cpp
include/bvp/: BVPSolver.hpp  BVPsolver.hpp  FDMethod1D.hpp  FDMethod2D.hpp
include/core/: FunctionParser.hpp  SystemParser.hpp
include/differentiation/: Differentiator.hpp  FirstDerivative.hpp  SecondDerivative.hpp  ThirdDerivative.hpp
include/eigenvalues/: EigenSolver.hpp  HouseholderMethod.hpp  JacobiMethod.hpp  PowerMethod.hpp  QRMethod.hpp  SVDMethod.hpp
include/integration/: GaussLegendre.hpp  Integrator.hpp  NewtonCotes.hpp  SingularityStrategies.hpp  SpecialGauss.hpp
include/ivp/: Adamsbashforth.hpp  EulerMethod.hpp  IVPSolver.hpp  RungeKutta.hpp
src/bvp/: FDMethod1D.cpp  FDMethod2D.cpp
src/core/: FunctionParser.cpp  SystemParser.cpp
src/differentiation/: FirstDerivative.cpp  SecondDerivative.cpp  ThirdDerivative.cpp
src/eigenvalues/: HouseholderMethod.cpp  JacobiMethod.cpp  PowerMethod.cpp  QRMethod.cpp  SVDMethod.cpp
src/integration/: GaussLegendre.cpp  NewtonCotes.cpp  SingularityStrategies.cpp  SpecialGauss.cpp
src/ivp/: Adamsbashforth.cpp  EulerMethod.cpp  RungeKutta.cpp
utils/: Matrix.cpp  Matrix.hpp
